--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "@bun-examples/elysia",
   "version": "1.0.50",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun --watch src/index.ts",
+    "build": "bun build src/index.ts",
+    "start": "NODE_ENV=production bun src/index.ts",
+    "test": "bun test"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@elysiajs/bearer": "^1.0.2",
+    "clipboardy": "^4.0.0",
+    "elysia": "latest",
+    "ts-md5": "^1.3.1"
   },
   "devDependencies": {
     "bun-types": "latest"
